active time update